--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,7 +8,7 @@
     <div class="item">
       <img class="ui centered rounded image" src="<%=blog.image%>" alt="">
       <div class="content">
-        <span><%=blog.created.toDateString()%></span>
+        <span><b><%=blog.created.toDateString()%></b></span>
       </div>
       <div class="description">
         <p><%=blog.body%></p>
