--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,38 @@
 <%include ./partials/header %>
-<h1>Index Page Test</h1>
 
-<%blogs.forEach(function(blog){ %>
+<div class="ui main text container">
+  <div class="ui huge header">
+    RESTful Blog App
+  </div>
+  <div class="ui top attached segment">
+    <div class="ui divided items">
+      <%blogs.forEach(function(blog){ %>
+        <div class="item">
+          <div class="image">
+            <img src="<%=blog.image%>" alt="">
+          </div>
+          <div class="content">
+            <a href="/blogs/<%=blog._id%>" class="header"><%=blog.title%></a>
+            <div class="meta">
+              <span><%=blog.created.toDateString()%></span>
+            </div>
+            <div class="description">
+              <p><%=blog.body.substring(0, 100)%>...</p>
+            </div>
+            <div class="extra">
+              <a href="/blogs/<%=blog._id%>" class="ui floated basic violet button">
+                Read More
+                <i class="right chevron icon"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      <%})%>
+    </div>
+  </div>
+</div>
+
+<!-- <%blogs.forEach(function(blog){ %>
   <div class="">
     <h2><%=blog.title%></h2>
     <img src="<%=blog.image%>" alt="">
@@ -9,6 +40,6 @@
     <p><%=blog.body.substring(0, 100)%>...</p>
     <a href="/blogs/<%=blog._id%>">Read More</a>
   </div>
-<%})%>
+<%})%> -->
 
 <%include ./partials/footer %>
