--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="ui main text container segment">
   <div class="ui huge header">
-    Create New Blog Post
+    Create New Post
   </div>
   <form action="/blogs" method="post" class="ui form">
     <div class="field">
